# prefect-scratch

./: .env.docker  .flake8  .gitignore  Dockerfile.base  Dockerfile.flow1  Dockerfile.flow2  Dockerfile.flow3  Makefile  README.md  TASK_14_COMPLETION_SUMMARY.md  TASK_14_DEFINITIVE_COMPLETION.md  TASK_16_IMPLEMENTATION_SUMMARY.md  TESTING_STRATEGY_REVISED.md  build_images.py  conftest.py  create_ui_deployments.py  deploy_all_flows.py  deployment_audit_report.md  deployment_rollback_state.json  deployment_system_status.md  docker-compose.error-recovery.yml  docker-compose.override.yml  docker-compose.yml  main.py  prefect.yaml  pyproject.toml  register_flows.py  run_and_register.py  run_isolated_tests.py  serve_flows.py  setup_docker.py  start_worker.py  task14_final_validation.py  task_1_completion_summary.md
.cursor/rules/: development-workflow.mdc  documentation.mdc  env-file-system.mdc  makefile-commands.mdc  prefect-workflows.mdc  project-structure.mdc  rpa3-concurrent-processing.mdc  security-best-practices.mdc  testing-strategy.mdc
.github/workflows/: automation-pipeline-isolated.yml  pragmatic-testing.yml
config/: deployment-config.json  deployment-config.yaml  deployment-manifest.json  scaling-policies.json
core/: __init__.py  config.py  container_config.py  container_lifecycle_manager.py  database.py  database_config_validator.py  distributed.py  error_recovery.py  flow_template.py  health_monitor.py  health_server.py  monitoring.py  operational_manager.py  performance_monitor.py  security_validator.py  service_orchestrator.py  tasks.py
core/docker/: Dockerfile
core/envs/: .env.container  .env.staging
deployment_system/: ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  MAKEFILE_INTEGRATION_SUMMARY.md  PYTHON_DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  UI_INTEGRATION_IMPLEMENTATION_SUMMARY.md  __init__.py
docs/: API_REFERENCE.md  BUILD_AUTOMATION_GUIDE.md  CONCURRENCY_CONTROL.md  CONFIGURATION_MANAGEMENT.md  CONFIGURATION_SYSTEM.md  CONTAINER_DEVELOPMENT_GUIDE.md  CONTAINER_LIFECYCLE_MANAGEMENT.md  CONTAINER_OPERATIONAL_RUNBOOKS.md  CONTAINER_PERFORMANCE_TUNING.md  CONTAINER_TESTING_IMPLEMENTATION.md  CONTAINER_TESTING_SYSTEM.md  CONTAINER_TROUBLESHOOTING_GUIDE.md  DATABASE_CONFIGURATION.md  DATABASE_CONFIGURATION_README.md  DATABASE_MANAGEMENT_DESIGN.md  DATABASE_MONITORING_UTILITIES.md  DATABASE_QUICK_START.md  DEVELOPER_SETUP.md  DEVELOPMENT_WORKFLOW.md  DISTRIBUTED_PROCESSING_DESIGN.md  DISTRIBUTED_PROCESSING_OPERATIONS_RUNBOOK.md  DISTRIBUTED_PROCESSING_README.md  DISTRIBUTED_PROCESSING_USAGE.md  DOCKER_COMPOSE_SETUP.md  ENV_FILE_SYSTEM.md  ERROR_RECOVERY_IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MOCKING_STRATEGY.md  OPERATIONAL_RUNBOOKS.md  PERFORMANCE_OPTIMIZATION.md  PREFECT_DEPLOYMENT_DEVELOPER_GUIDE.md  PREFECT_DEPLOYMENT_SETUP_GUIDE.md  PREFECT_DEPLOYMENT_TROUBLESHOOTING_GUIDE.md  PREFECT_FLOW_STRUCTURE_GUIDE.md  PREFECT_UI_DEBUGGING_GUIDE.md  PROCESSING_QUEUE_INDEXES.md  README.md  TASK_12_IMPLEMENTATION_SUMMARY.md  TESTING_STRATEGY.md  TROUBLESHOOTING_GUIDE.md  (+1 more)
flows/: __init__.py
monitoring/: alert_rules.yml  prometheus.yml
scripts/: build_all.sh  build_base_image.sh  build_cache_manager.sh  build_flow_images.sh  build_optimizer.sh  build_performance_monitor.py  build_rpa1.sh  build_rpa2.sh  build_rpa3.sh  check_test_data.sh  container_lifecycle_startup.py  container_startup_with_recovery.py  debug_toolkit.py  deployment_automation.py  dev_workflow.py  development_watcher.py  error_recovery_monitor.py  fast_test_runner.py  flow_startup.sh  generate_ci_configs.py  health_check.py  manage_containers.sh  mark_slow_tests.py  mark_slow_tests_aggressive.py  pgadmin_servers.json  run_operational_tests.py  run_performance_tests.py  security_scanner.sh  selective_rebuild.sh  setup_dev_environment.sh  setup_docker_environment.sh  setup_environments.py  test_error_recovery_integration.py  validate_database_config.py
test_results/: pipeline_result_pipeline_20250929_185049_20250929_185049.json
(+216 files in other folders)
