[project]
name = "prefect-rpa-solution"
version = "0.1.0"
description = "A modular RPA solution built with Prefect 3"
authors = [
    {name = "RPA Developer", email = "developer@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "prefect>=3.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "pytest-watch>=4.2.0",
    "psycopg2-binary>=2.9.0",
    "pyodbc>=4.0.0",
    "pyway<=0.3.32",
    "sqlalchemy>=2.0.0",
    "tenacity>=8.0.0",
    "psutil>=7.1.0",
    "watchdog>=3.0.0",
    "docker>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "flows"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["core", "flows"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["core/test", "flows/rpa1/test", "flows/rpa2/test", "flows/rpa3/test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for workflows",
    "slow: Slow running tests",
    "performance: Performance and benchmarking tests",
]
filterwarnings = [
    "ignore:.*callable.*is not a Python type.*:UserWarning:pydantic.*",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "ruff>=0.13.2",
]
